@@ -1,5 +1,6 @@
 pub/*
 makefly.rc
 README.html
+README.fr.html
 mbackup/*
 tmp/*
